--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,16 @@
 {
-  "cSpell.words": ["buildlog", "dotenv", "Schyler", "swiftpm", "Symbolication"],
-  "java.configuration.updateBuildConfiguration": "interactive"
+  "cSpell.words": [
+    "buildlog",
+    "dotenv",
+    "fastapi",
+    "Schyler",
+    "swiftpm",
+    "Symbolication",
+    "uvicorn"
+  ],
+  "java.configuration.updateBuildConfiguration": "automatic",
+  "python.defaultInterpreterPath": "${workspaceFolder}/ai_edu_api/venv/Scripts/python.exe",
+  "python.analysis.extraPaths": [
+    "${workspaceFolder}/ai_edu_api/venv/Lib/site-packages"
+  ]
 }
