'アンドロイドエラー修正'

--- a/ai_edu_api/Dockerfile
+++ b/ai_edu_api/Dockerfile
@@ -1,8 +1,11 @@
-# ベースイメージ
-FROM python:3.11-slim
+# ベースイメージ - 最新のセキュリティアップデートを含む
+FROM python:3.11-slim-bookworm
 
 # 作業ディレクトリを /app に
 WORKDIR /app
+
+# セキュリティアップデートを適用
+RUN apt-get update && apt-get upgrade -y && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # 依存関係ファイルをコピーしてインストール
 COPY requirements.txt .
