--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,9 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_chat_ui: ^1.5.0
-  flutter_chat_types: ^3.0.2
-  http: ^0.13.6
+  flutter_chat_ui: 1.6.9
+  flutter_chat_types: ^3.6.2
+  http: ^1.4.0
   uuid: ^3.0.7
 
 dev_dependencies:
