--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   http: ^1.4.0
   uuid: ^3.0.7
   supabase_flutter: ^1.10.17
+  flutter_markdown: ^0.7.7+1
 
 dev_dependencies:
   flutter_test:
