--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   uuid: ^3.0.7
   supabase_flutter: ^1.10.17
   flutter_markdown: ^0.7.7+1
+  animated_text_kit: ^4.2.3
+  flutter_highlight: ^0.7.0
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
