--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
     "swiftpm",
     "Symbolication",
     "uvicorn",
+    "Vercel",
     "wordcloud"
   ],
   "java.configuration.updateBuildConfiguration": "automatic",
