--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   animated_text_kit: ^4.2.3
   flutter_highlight: ^0.7.0
   google_fonts: ^6.2.1
+  printing: ^5.14.2
+  pdf: ^3.11.3
 
 dev_dependencies:
   flutter_test:
