--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -24,5 +24,13 @@ linter:
     # avoid_print: false  # Uncomment to disable the `avoid_print` rule
     # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
 
+analyzer:
+  errors:
+    deprecated_member_use: ignore
+    deprecated_member_use_from_same_package: ignore
+    use_build_context_synchronously: ignore
+    todo: ignore
+    avoid_print: ignore
+    depend_on_referenced_packages: ignore
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
