--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,6 @@ dependencies:
     sdk: flutter
   flutter_chat_ui: ^2.3.0
   flutter_chat_types: ^3.6.2
-  flutter_dotenv: ^5.1.0
   http: ^1.4.0
   uuid: ^4.5.1
   supabase_flutter: ^2.9.0
@@ -66,7 +65,7 @@ flutter:
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
   assets:
-    - .env
+    - assets/fonts/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
