--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,11 @@ dependencies:
   printing: ^5.14.2
   pdf: ^3.11.3
   intl: ^0.20.2
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  path_provider: ^2.1.5
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.15
 
 dev_dependencies:
   flutter_test:
