--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -35,5 +35,6 @@ analyzer:
     prefer_interpolation_to_compose_strings: ignore
     unnecessary_import: ignore
     unnecessary_this: ignore
+    use_super_parameters: ignore
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
