--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   hive_generator: ^2.0.1
   build_runner: ^2.4.15
   characters: ^1.4.0
+  provider: ^6.1.5
 
 dev_dependencies:
   flutter_test:
