--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -36,5 +36,6 @@ analyzer:
     unnecessary_import: ignore
     unnecessary_this: ignore
     use_super_parameters: ignore
+    await_only_futures: ignore
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
